# wgpu-life-compute

./: Cargo.toml
src/: game_of_life.wgsl  main.rs  shader.wgsl
