[package]
name = "wgpu-life"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
pollster = "0.2.4"
wgpu = { git = "https://github.com/Elabajaba/wgpu.git", branch = "dx12-features" }
winit = "0.25.0"
